index.css
/* ... */
@media (min-width:35em) {
    .primary-navigation {
        padding-inline: clamp(3rem, 5vw,7rem)
    }
}

@media (min-width: 35em) and (max-width:44.999em){
    .primary-navigation a > span {
        display: none;
    }
}

@media (min-width: 45em) {

    .primary-header::after {
        content: '';
        display:block;
        position:relative;
        height:1px;
        width:100%;
        margin-right: -2.5rem;
        background:hsl(var(--clr-white)/.25);
        order:1
    }

    nav {
        order:2;
    }
    .primary-navigation {
        margin-block:2rem;
    }
}

.underline-indicator > * {
    padding: var(--underline-gap, 1rem) 0;
    border:0;
    border-bottom: .2rem solid hsl(var(--clr-white) /0);
    cursor: pointer;
}

.underline-indicator >*:hover,
.underline-indicator >*:focus-visible {
    border-color:hsl(var(--clr-white)/.5);
    outline: none;  
}


.underline-indicator > .active,
.underline-indicator > [aria-selected="true"]
{
    color:hsl(var(--clr-white) / 1);
    border-color: hsl(var(--clr-white) / 1);
}

.tab-list{
 --gap:2rem;
}


.dot-indicators > *{
    cursor:pointer;
    border:0;
    border-radius: 50%;
    aspect-ratio: 1;
    border-radius: 50%;
    background-color: hsl(var(--clr-light)/.25);
    padding:.5rem;
}

.dot-indicators > *:hover,
.dot-indicators > *:focus-visible
{
    background-color: hsl(var(--clr-white) /.60);
}

.dot-indicators > .active,
.dot-indicators > [aria-selected='true']
{
    background-color:hsl(var(--clr-white) )
}

.number-indicators {
margin:1rem;
}

.number-indicators {
    display: grid;
    place-items: center;
}

.number-indicators > * {
    display: flex;
    justify-content: center;
    align-items: center;
    width:50px;
    height: 50px;
    aspect-ratio: 1;
    border-radius: 50%;
    padding:2.25rem;
    margin-bottom:1rem;
    cursor: pointer;
    background-color: hsl(var(--clr-dark) );
    color:hsl(var(--clr-white) );
    outline: 0;
    border:2px solid hsl(var(--clr-light)/.25);
    /* outline:hsl(var(--clr-light)) */
}

.number-indicators > .active,
.number-indicators > [aria-selected='true']
{
    background-color: hsl(var(--clr-white));
    border-color: hsl(var(--clr-white) );
    color:black
}

.number-indicators > button:hover,
.number-indicators > button:focus       
{
 border:2px solid hsl(var(--clr-white));   
}

.number-indicators > button:focus{
    border:3px solid hsl(var(--clr-light)/.9)
}

/* ------------------------ */
/* Page Specific Background */
/* ------------------------ */
body {
    background-size:cover;
    background-position: bottom center;
}

/* Home */

.home {
    background-image: url(./starter-code/assets/home/background-home-mobile.jpg);
}

@media (min-width:35rem){
    .home {
        background-position: center center;
        background-image: url(./starter-code/assets/home/background-home-tablet.jpg) ;
    }
}

@media (min-width:45rem){
    .home {
        background-image: url(./starter-code/assets/home/background-home-desktop.jpg) ;
    }
}


/* ------------------------ */
/* Layout */
/* ------------------------ */

.grid-container {
    text-align: center;
    display: grid;
    border: 5px solid limegreen;
    place-items:center;
    padding-inline:1rem;
    padding-bottom: 2.5rem;
}

.grid-container p:not([class]) {
    max-width: 50ch;
}

.numbered-title {
    grid-area: title;
}

/* Destination layout */

.grid-container--destination {
    --flow-space:1.5rem;
    grid-template-areas: 
        "title"
        "image"
        "tabs"
        "content";
}


.grid-container--destination > img {
    grid-area:image;
    max-width: 60%;
}

.grid-container--destination > .tab-list {
    grid-area: tabs;    
}

.grid-container--destination > .destination-info {
    grid-area: content;
}

.destination-meta {
    flex-direction: column;
    border-top: 1px solid hsl(var(--clr-white) / .1);
    padding-top: 2.5rem;
    margin-top: 2.5rem;
}

.destination-meta p {
    font-size: 1.75rem;
}

/* Destination layout */

.grid-container--crew {
    --flow-space:1.5rem;
    grid-template-areas: 
        "title"
        "image"
        "tabs"
        "info";
}

.grid-container--crew > img {
    grid-area:image;
    max-width: 60%;
    border-bottom: 1px solid hsl(var(hsl(var(--clr-white) / .1)));
}

.grid-container--crew > .grid-title {
    border:1px solid yellow;
    grid-area:title;
}

.grid-container--crew > .dot-indicators {
    grid-area:tabs;    
}

.grid-container--crew > .crew-details{
    grid-area: info;
}

@media (min-width:35em) { /*Tablet layout*/
    .numbered-title {
        justify-self: start;
        margin-top: 2rem;
    }
    .destination-meta {
        flex-direction: row;
        justify-content: space-evenly;
    }

    /* Crew section */

    .grid-container--crew {
        grid-template-areas: 
            "title"
            "info"
            "tabs"
            "image";
    }
}


@media (min-width: 45em) { /*Desktop and above layout*/
    .grid-container {
        text-align: left;
        column-gap: var(--container-gap, 2rem);
        grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0,30rem)) minmax(1rem, 1fr);
    }

    .grid-container--home > *:first-child {
        grid-column:2;
        outline:1px solid red;
    }
    
    .grid-container--home > *:last-child {
        grid-column:3;
        outline:1px solid yellow;
    }

    .grid-container--home {
        padding-bottom: max(6rem, 10rem);
        align-items: end;
    }

    .grid-container--destination {
        justify-items: start;
        align-content: start;
        grid-template-areas:
        '. title title .'
        '. image tabs .'
        '.image content .'
        ;
    }

    .grid-container--destination > img {
       max-width:90%;
    }

    .destination-meta {
        justify-content: start;
        --gap: min(6vw, 4.5rem)
    }
}

